fixing image issues

--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -88,15 +88,14 @@ Loading an image from the internet:<br/>
 Loading a local image:
 <br/>
 
-<img src="public/images/pop.jpg">
-    
+<img src="pop.jpg">
+
+
+  
 
 
 
-
-
-
-    <h2>Text fields</h2>
+<h2>Text fields</h2>
 <form id="text-fields">
    <label for="text-fields-username">Username:</label>
    <input id="text-fields-username" placeholder="jdoe"/><br/>
