--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -14,7 +14,7 @@
     </h1>
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="../tuiter/explore2/index.html">Explore</a></li>
+        <li><a href="../tuiter/explore/index.html">Explore</a></li>
         <li><a href="notifications.html">Notifications</a></li>
         <li><a href="messages.html">Messages</a></li>
         <li><a href="bookmarks.html">Bookmarks</a></li>
