--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -89,12 +89,12 @@
         <div class="post-float-left">
             <div><span class="post-topic-color margin-left"> COVID-19 </span>
                 <span class="wd-post-topic"> &#183 Live </span></div>
-            <div class="post-title margin-left"> Meet The Woo 2.
+            <div class="post-title margin-left"> Meet The Woo 2 (CERTIFIED SLAYER).
                  
             </div>
         </div>
         <div class="post-float-right">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6sF0ei-ZR8mrPsYR5yVNOhLkhf5BI7psZdw&usqp=CAU" class="post-image-width" alt="Post Image"/>
+            <img src="https://media-exp1.licdn.com/dms/image/D4E03AQHUth-XS8OcbA/profile-displayphoto-shrink_800_800/0/1668188064788?e=1674086400&v=beta&t=azq83Jp23m0LT7kXvL03WipQ_lcpNpyeFgioXK-OxFw" class="post-image-width" alt="Post Image"/>
         </div>
         <div class="float-clear"></div>
     </div>
